--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Dev instance of azure webapp</title>
+<title>Dev instance of azure webapp v2</title>
 </head>
 <body>
 
